# graphical-comp-class-game

./: .gitignore  README.md  jogo1-cg-t1.py  main.py  pyproject.toml  relatorio.md
src/game/: main.py
src/game/phases/001/: map.json
src/game/phases/002/: map.json
src/game/phases/003/: map.json
src/game/phases/004/: map.json
src/game/phases/005/: map.json
src/game/phases/006/: map.json
src/game/phases/007/: map.json
src/game/phases/008/: map.json
