[project]
name = "graphical-computing-class-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
]

[project.scripts]
grid-view = "game.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game"]
